<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimary"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RestaurantInfo">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#fff"
        android:fitsSystemWindows="true"
        android:paddingHorizontal="20dp"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_restaurant_name1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/google_sans"
            android:text="Restaurant Name"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:gravity="center"/>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true">

            <android.support.design.widget.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search_for_menu"
                android:fontFamily="@font/google_sans"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="20dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/search_menu"
                    android:maxLines="1"
                    android:fontFamily="@font/google_sans"
                    android:drawableEnd="@drawable/ic_search_black_24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:fontFamily="@font/google_sans"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="16dp"
                android:text="@string/available_menu"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/menu_recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="12dp"
                android:scrollbars="vertical" />

            <android.support.design.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:id="@+id/btn_add_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:fontFamily="@font/google_sans"
                android:textAllCaps="false"
                android:text="@string/add_menu"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="12dp"
                android:background="#D9D9D9"/>

            <android.support.design.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:id="@+id/btn_edit_restaurant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:fontFamily="@font/google_sans"
                app:backgroundTint="#c62828"
                android:textAllCaps="false"
                android:text="@string/edit_or_delete_restaurant"/>

        </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>