<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#fff"
        android:fitsSystemWindows="true"
        android:paddingHorizontal="20dp"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/google_sans"
            android:text="@string/edit_or_delete_restaurant"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:gravity="center"/>

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    style="@style/InputTextCustom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:layout_marginTop="20dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_restaurant_name"
                        android:hint="@string/restaurant_name"
                        android:inputType="textPersonName"
                        android:singleLine="true"
                        android:maxLines="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/google_sans"
                        android:textColor="#424242"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    style="@style/InputTextCustom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_restaurant_address"
                        android:hint="@string/restaurant_address"
                        android:singleLine="true"
                        android:maxLines="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/google_sans"
                        android:textColor="#424242"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:background="#FFFFFF">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#D9D9D9"/>

            <android.support.design.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp"
                android:id="@+id/btn_save_restaurant1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Continue"
                android:fontFamily="@font/google_sans"
                android:textAllCaps="false"/>

            <android.support.design.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                app:backgroundTint="#c62828"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="16dp"
                android:id="@+id/btn_delete_restaurant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Delete Restaurant"
                android:fontFamily="@font/google_sans"
                android:textAllCaps="false"/>

        </LinearLayout>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>